--- a/Ejercicio Practica/css/styles.css
+++ b/Ejercicio Practica/css/styles.css
@@ -1,1 +1,58 @@
+/*Algunas modificaciones generales*/
 
+body{
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    width: 200px;
+    padding-top: 100px;
+    margin: 0 auto;
+}
+
+
+/*Texto o elemento del cual será referencia el tooltip*/
+
+.tooltip{
+    font-weight: 20px;
+    color: sandybrown;
+    position: relative;
+}
+
+/*Comportamiento del tooltip para volver a aparecer*/
+
+.tooltip:hover .tooltipText{
+    display: inline-block;
+}
+/*Especificaciones para modificar el comportamiento 
+para que desaparezca y ademas agregar un poco de diseño al mismo tooltip*/
+.tooltipText{
+    display: none;
+    position: absolute;
+    background-color: gray;
+    line-height: 20px;
+    z-index: 1;
+    text-align: center;
+    color: black;
+    font-size: 25px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    left: 27px;
+    right: 0;
+    bottom: -40px;
+}
+
+/*Usamos el selector after para lo que
+sucede despues de estar encima del area del 
+elemento al cual queremos agregar un tooltip*/
+
+
+.tooltipText::after{
+    content: "";
+    display: block;
+    border-bottom: 7px solid gray;
+    border-left: 7px solid transparent;
+    border-right: 7px solid transparent;
+    position: absolute;
+    top: -7px;
+    left: 83px;
+}
